# movielens_analysis

./: .gitignore  Makefile  README.md  pyproject.toml
config/: cluster_config.json  local_config.json
dependencies/: job_submitter.py
eda/: data_analysis.ipynb  data_viz.ipynb
infra/: Dockerfile  Makefile  docker-compose.yml  entrypoint-yarn.sh
src/: job_submitter.py
src/cleaned/: movies_cleaned.py  ratings_cleaned.py
src/modules/: helpers.py
src/transformed/: movies_statistics.py  question_2.py  question_3.py  users_top_three_movies.py
tests/: conftest.py  test_job_submitter.py  test_movielens_analysis.py  test_transformations.py
