[tool.poetry]
name = "movielens_analysis"
version = "0.1.0"
description = ""
authors = ["Rael Williamson <rael.williamson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pyspark = "^3.5.0"
numpy = "^1.26.2"
pandas = "^2.1.3"
ipykernel = "^6.27.1"
matplotlib = "^3.8.2"
scipy = "^1.11.4"
black = "^23.11.0"
typer = "^0.9.0"
pyarrow = "^14.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
